--- a/MoPS_daq_cfg.yml
+++ b/MoPS_daq_cfg.yml
@@ -1,9 +1,10 @@
 Application: 
-        name : 'MoPS Testing'
-
+        app_name : 'CanMoPs'
+        version: "v1.0"
+        interface_items: ["----","AnaGate" , "Kvaser","Others"]
+        index_items:    ["0x1000"]
 CAN_settings:
         nodeIds: [8]
-        
         
 CAN_Interface:
     AnaGate :
