--- a/config/main_cfg.yml
+++ b/config/main_cfg.yml
@@ -1,9 +1,14 @@
 CAN_settings:
         nodeIds: [8]
+
 default_values:
     interface_items : ["----","AnaGate" , "Kvaser","Others"]
     index_items     : ["0x1000"]
     bitrate_items   : ["10000", "20000", "50000", "62500", "100000", "125000", "250000", "500000", "1000000"]     
+    bytes           : ["40","0","34","1","0","0","0","0"] 
+    subIndex        : "0"
+    cobid           : "0x608"
+    dlc             : "8"
 
 CAN_Interface:
     AnaGate :
