--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//analysis/CANopenConstants.py=utf-8
 encoding//graphics_Utils/mainWindow.py=utf-8
-encoding/test.py=utf-8
+encoding/CANMOPS_GUI.py=utf-8
+encoding/CANMOPS_test.py=utf-8
