--- a/config/MOPS_cfg.yml
+++ b/config/MOPS_cfg.yml
@@ -1,6 +1,40 @@
 Application:
     device_name             :   'MoPS'
     device_version          :   "v1.0"
+    adc_channels            : {"1":"V",
+                               "2":"V",
+                               "3":"V",
+                               "4":"V",
+                               "5":"V",
+                               "6":"V",
+                               "7":"V",
+                               "8":"V",
+                               "9":"V",
+                               "10":"V",
+                               "11":"V",
+                               "12":"V",
+                               "13":"V",
+                               "14":"V",
+                               "15":"V",
+                               "16":"T",
+                               "17":"V",
+                               "18":"V",
+                               "19":"T",
+                               "20":"V",
+                               "21":"V",
+                               "22":"T",
+                               "23":"V",
+                               "24":"T",
+                               "25":"V",
+                               "26":"V",
+                               "27":"T",
+                               "28":"V",
+                               "29":"V",
+                               "30":"V",
+                               "31":"V",
+                               "32":"V",
+                               "33":"V",
+                               "34":"V"} 
     icon_dir                :   "graphics_Utils/icons/icon_mops.png"
     nodeIds                 :   [1]
     index_items             :   {
