--- a/config/PSPP_cfg.yml
+++ b/config/PSPP_cfg.yml
@@ -1,6 +1,8 @@
 Application:
     device_name             :   'PSPP'
     device_version          :   "v3.0"
+     adc_channels            : {"1":"V",
+                               "2":"V"}
     icon_dir                :   "graphics_Utils/icons/icon_pspp.png"
     nodeIds                 :   [8]
     index_items             :   {
