Fix: Confirm nodes

--- a/config/MOPS_cfg.yml
+++ b/config/MOPS_cfg.yml
@@ -1,38 +1,6 @@
 Application:
     device_name             :   'MoPS'
     device_version          :   "v1.0"
-    adc_channels            : {"3":"V",
-                               "4":"V",
-                               "5":"V",
-                               "6":"V",
-                               "7":"V",
-                               "8":"V",
-                               "9":"V",
-                               "10":"V",
-                               "11":"V",
-                               "12":"V",
-                               "13":"V",
-                               "14":"V",
-                               "15":"V",
-                               "16":"T",
-                               "17":"V",
-                               "18":"V",
-                               "19":"T",
-                               "20":"V",
-                               "21":"V",
-                               "22":"T",
-                               "23":"V",
-                               "24":"T",
-                               "25":"V",
-                               "26":"V",
-                               "27":"T",
-                               "28":"V",
-                               "29":"V",
-                               "30":"V",
-                               "31":"V",
-                               "32":"V",
-                               "33":"V",
-                               "34":"V"} 
     icon_dir                :   "graphics_Utils/icons/icon_mops.png"
     nodeIds                 :   [1]
     index_items             :   {
@@ -120,3 +88,37 @@ Application:
                                                                         "1E":"<html><u>subindex 1E</u>:ADCCh32</html>",
                                                                         "1F":"<html><u>subindex 20</u>:ADCCh33</html>",
                                                                         "20":"<html><u>subindex 21</u>:ADCCh34</html>"}}}
+adc_channels_reg:
+    adc_index               : "0x2400"
+    adc_channels            : {"3":"V",
+                               "4":"V",
+                               "5":"V",
+                               "6":"V",
+                               "7":"V",
+                               "8":"V",
+                               "9":"V",
+                               "10":"V",
+                               "11":"V",
+                               "12":"V",
+                               "13":"V",
+                               "14":"V",
+                               "15":"V",
+                               "16":"T",
+                               "17":"V",
+                               "18":"V",
+                               "19":"T",
+                               "20":"V",
+                               "21":"V",
+                               "22":"T",
+                               "23":"V",
+                               "24":"T",
+                               "25":"V",
+                               "26":"V",
+                               "27":"T",
+                               "28":"V",
+                               "29":"V",
+                               "30":"V",
+                               "31":"V",
+                               "32":"V",
+                               "33":"V",
+                               "34":"V"} 
