--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//analib/channel.py=utf-8
 encoding//analysis/CANopenConstants.py=utf-8
 encoding//graphics_Utils/mainWindow.py=utf-8
 encoding//graphics_Utils/test_files/test_AnaGate.py=utf-8
