Add yaml file for default settings by user

--- a/config/MOPS_cfg.yml
+++ b/config/MOPS_cfg.yml
@@ -2,9 +2,7 @@ Application:
     device_name             :   'MOPS'
     device_version          :   "v1.0"
     icon_dir                :   "graphics_utils/icons/icon_mops.png"
-    channelList             :   {"1":{"adctrim":"8" , "connected_nodes":{"1"}}, 
-                                 "8":{"adctrim":"8" , "connected_nodes":{"1"}},
-                                 "can0":{"adctrim":"8" , "connected_nodes":{"1","2"}}}
+    nodeIds                 :   {"1", "8"}
     index_items             :   {
                                 "------" :  {"description_items" :"<html><b>-----</b></html>",
                                              "subindex_items"    :{     "-----":"<html><b>-----</b></html>"}} 
