--- a/config/main_cfg.yml
+++ b/config/main_cfg.yml
@@ -3,7 +3,7 @@ Application:
     app_version          :   "v1.1"
     app_icon_dir         :   "graphics_utils/icons/icon_mops.png"   
     can_settings         : True
-channel_ports:      {"0","1","2"}
+channel_ports:      {"0"}
 
 Devices:    ["MOPS"] 
 
@@ -14,10 +14,8 @@ default_values:
     subIndex        : "0"
     cobid           : "0x601"
     dlc             : "8"
-    bitrate         : 125000
-    ipAddress       : "192.168.1.254"
-    channel         : 1
-CAN_Interfaces:   {"AnaGate"    :{"bitrate":125000 , "ipAddress":"192.168.1.254"    ,"timeout":500    ,"channels":{1: [1]}},
+    adctrim         : 0    
+CAN_Interfaces:   {"AnaGate"    :{"bitrate":125000 , "ipAddress":"192.168.1.254"    ,"timeout":500    ,"channels":{1: [1,2]}},
                    "Kvaser"     :{"bitrate":125000 , "ipAddress":"None"             ,"timeout":500    ,"channels":{0: [1]}},
                    "socketcan"  :{"bitrate":125000 , "ipAddress":"None"             ,"timeout":500    ,"channels":{0: [1]}}}
 Other:
